Updated keycloak chart

--- a/charts/keycloak/templates/post-install-job.yaml
+++ b/charts/keycloak/templates/post-install-job.yaml
@@ -1,3 +1,4 @@
+{{- if or .Values.realms .Values.clients }}
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -34,7 +35,7 @@ spec:
             apt update && apt upgrade -y && apt install -y curl jq
             echo "Waiting for keycloak api"
             i=0
-            while [[ "$(curl -s -o /dev/null -L -w ''%{http_code}'' http://{{ .Release.Name }}-keycloak.{{ .Values.namespace }}.svc.cluster.local:8080/auth/realms/master/.well-known/openid-configuration)" != 200  ]];do
+            while [[ "$(curl -s -o /dev/null -L -w ''%{http_code}'' http://{{ .Release.Name }}-keycloak.{{ .Values.namespace.name | default .Release.Namespace | default "default" }}.svc.cluster.local:{{ .Values.port }}/auth/realms/master/.well-known/openid-configuration)" != 200  ]];do
                     echo "Not 200, Waiting for keycloak api." && sleep 2;
                     ((i+=1))
                     if [[ "$i" -gt 30 ]]; then
@@ -43,30 +44,12 @@ spec:
                     fi
             done
             echo "Getting access token"
-            ACCESS_TOKEN=$(curl -XPOST -s -H "Content-Type: application/x-www-form-urlencoded" -d "username={{ .Values.username }}" -d "password={{ .Values.password }}" -d "grant_type=password" -d "client_id=admin-cli" 'http://{{ .Release.Name }}-keycloak.{{ .Values.namespace }}.svc.cluster.local:8080/auth/realms/master/protocol/openid-connect/token' | jq -r '.access_token')
-            echo "Creating realm"
-            curl -XPOST 'http://{{ .Release.Name }}-keycloak.{{ .Values.namespace }}.svc.cluster.local:8080/auth/admin/realms' -H "Authorization: Bearer ${ACCESS_TOKEN}" -H "Content-Type: application/json" --data-raw '{
-              "realm": "{{ .Values.realm }}",
-              "displayName": "{{ .Values.realm }}",
-              "enabled": true,
-              "users": [
-                {
-                  "email": "{{ .Values.user.email }}",
-                  "enabled": true,
-                  "username": "{{ .Values.user.email }}",
-                  "realmRoles":[
-                    "uma_authorization",
-                    "offline_access"
-                  ],
-                  "credentials": [
-                    {
-                      "temporary": false,
-                      "type": "password",
-                      "value": "{{ .Values.user.password }}"
-                    }
-                  ]
-                }
-              ]
-             }'
-            curl -XPOST 'http://{{ .Release.Name }}-keycloak.{{ .Values.namespace }}.svc.cluster.local:8080/auth/admin/realms/{{ .Values.realm }}/clients' -H "Authorization: Bearer ${ACCESS_TOKEN}" -H "Content-Type: application/json" --data-raw '{"clientId": "{{ .Values.clientId }}", "directAccessGrantsEnabled":true, "redirectUris":["*"],"secret":"{{ .Values.uuid | default uuidv4 }}"}'
-
+            ACCESS_TOKEN=$(curl -XPOST -s -H "Content-Type: application/x-www-form-urlencoded" -d "username={{ .Values.master.username }}" -d "password={{ .Values.master.password }}" -d "grant_type=password" -d "client_id=admin-cli" 'http://{{ .Release.Name }}-keycloak.{{ .Values.namespace.name | default .Release.Namespace | default "default" }}.svc.cluster.local:{{ .Values.port }}/auth/realms/master/protocol/openid-connect/token' | jq -r '.access_token')
+            echo "Creating realms"
+            {{- range .Values.realms }}
+            curl -XPOST 'http://{{ $.Release.Name }}-keycloak.{{ $.Values.namespace.name | default $.Release.Namespace | default "default" }}.svc.cluster.local:{{ $.Values.port }}/auth/admin/realms' -H "Authorization: Bearer ${ACCESS_TOKEN}" -H "Content-Type: application/json" --data-raw '{{ . | toJson }}'
+            {{- end }}
+            {{- range .Values.clients }}
+            curl -XPOST 'http://{{ $.Release.Name }}-keycloak.{{ $.Values.namespace.name | default $.Release.Namespace | default "default" }}.svc.cluster.local:{{ $.Values.port }}/auth/admin/realms/{{ .realm }}/clients' -H "Authorization: Bearer ${ACCESS_TOKEN}" -H "Content-Type: application/json" --data-raw '{{ unset . "realm" | toJson }}'
+            {{- end }}
+{{- end }}
