--- a/charts/keycloak/templates/keycloak.yaml
+++ b/charts/keycloak/templates/keycloak.yaml
@@ -1,19 +1,3 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: {{ .Release.Name }}-keycloak
-  namespace: {{ .Values.namespace.name | default .Release.Namespace | default "default" }}
-  labels:
-    app: keycloak
-spec:
-  ports:
-  - name: http
-    port: 8080
-    targetPort: 8080
-  selector:
-    app: keycloak
-  type: ClusterIP
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -42,18 +26,24 @@ spec:
         - name: PROXY_ADDRESS_FORWARDING
           value: "true"
         - name: DB_VENDOR
-          value: {{ .Values.database.type }}
+          value: {{ .Values.database }}
         - name: DB_ADDR
-          value: {{ .Release.Name }}-{{ .Values.database.type }}.{{ .Values.namespace.name | default .Release.Namespace | default "default" }}.svc.cluster.local
+          value: {{ .Release.Name }}-{{ .Values.database }}.{{ (get .Values ( printf "%s" .Values.database )).namespace.name | default .Release.Namespace | default "default" }}.svc.cluster.local
         - name: DB_USER
           value: root
         - name: DB_PASSWORD
-          value: password
+          {{- if (get .Values ( printf "%s" .Values.database )).rootPassword.value }}
+          #Using plain text
+          value: {{ (get .Values ( printf "%s" .Values.database )).rootPassword.value }}
+          {{- else if (get .Values ( printf "%s" .Values.database )).rootPassword.secret }}
+          valueFrom:
+            secretKeyRef:
+              name: {{ (get .Values ( printf "%s" .Values.database )).rootPassword.secret.name }}
+              key: {{ (get .Values ( printf "%s" .Values.database )).rootPassword.secret.key }}
+          {{- end }}
         ports:
         - name: http
           containerPort: 8080
-        - name: https
-          containerPort: 8443
         readinessProbe:
           httpGet:
             path: /auth/realms/master
